change input file

--- a/test100k.in
+++ b/test100k.in
@@ -1,14 +1,40 @@
-S under
-D underachievement
-S under
-S sneaky
-A sneaky 67894
-S sneaky
-AC log
-D logistics
-AC logis
-S sky
-AC skyt
-D skytop
-AC sky
-AC alameda
+S grand
+S and
+S violet
+S xray
+A henry 123456
+A han 2343
+A sinka 43434
+A canoo 3232
+A frendop 32324
+A silicpy 1759
+A frin 43434
+A dlen 43434
+A dnedi 43443
+A akalfr 3232
+S henry
+S han
+S frin
+S akalfr
+S silicpy
+S frendop
+AC fis
+AC can
+AC sili
+AC hon
+AC ak
+AC an
+AC n
+AC sl
+AC c
+AC m
+D canoo
+D henry
+D han
+D sinka
+D akalfr
+D lend
+D frendop
+D frin
+D silicpy
+D dlen
