--- a/test5k.in
+++ b/test5k.in
@@ -1,22 +1,40 @@
-S happen
-A happen 1000
-S happens
-AC ha
-A happens 1000000
-S happens
-AC test
-D testimonals
-S testimonals
-AC te
-A testimonals 331441
-AC te
-AC improve
-S improvement
-A improvement 1000
-AC improvement
-D improvement
-D improvement
-AC improv
-A supersonic 100000
-D supersonic
-AC super
+S grand
+S and
+S violet
+S xray
+A henry 123456
+A han 2343
+A sinka 43434
+A canoo 3232
+A frendop 32324
+A silicpy 1759
+A frin 43434
+A dlen 43434
+A dnedi 43443
+A akalfr 3232
+S henry
+S han
+S frin
+S akalfr
+S silicpy
+S frendop
+AC fis
+AC can
+AC sili
+AC hon
+AC ak
+AC an
+AC n
+AC sl
+AC c
+AC m
+D canoo
+D henry
+D han
+D sinka
+D akalfr
+D lend
+D frendop
+D frin
+D silicpy
+D dlen
