--- a/test10k.in
+++ b/test10k.in
@@ -1,22 +1,40 @@
-S anti
-A antisocial 1000
-S anti
-AC tran
-A transcend 1000000
-S transcend
-AC enc
-D encyclopae
-S encyclopaedi
-AC en
-A encyclopaedia 331441
-AC ency
-AC ox
-S oxtail
-A oxygen 1000
-AC oxy
-D oxygen
-D oxygen
-AC blott
-A distribution 100000
-D distributes
-AC dist
+S grand
+S and
+S violet
+S xray
+A henry 123456
+A han 2343
+A sinka 43434
+A canoo 3232
+A frendop 32324
+A silicpy 1759
+A frin 43434
+A dlen 43434
+A dnedi 43443
+A akalfr 3232
+S henry
+S han
+S frin
+S akalfr
+S silicpy
+S frendop
+AC fis
+AC can
+AC sili
+AC hon
+AC ak
+AC an
+AC n
+AC sl
+AC c
+AC m
+D canoo
+D henry
+D han
+D sinka
+D akalfr
+D lend
+D frendop
+D frin
+D silicpy
+D dlen
