test data input & exp output

--- a/test10k.in
+++ b/test10k.in
@@ -1,7 +1,13 @@
-S grand
-S and
-S violet
-S xray
+S jame
+S ferries
+S eyebright
+S gdynia
+S executory
+S satire
+S beamsplitter
+S pressured
+S ediff
+S fortitudez
 A henry 123456
 A han 2343
 A sinka 43434
@@ -12,12 +18,6 @@ A frin 43434
 A dlen 43434
 A dnedi 43443
 A akalfr 3232
-S henry
-S han
-S frin
-S akalfr
-S silicpy
-S frendop
 AC fis
 AC can
 AC sili
@@ -28,13 +28,13 @@ AC n
 AC sl
 AC c
 AC m
-D canoo
-D henry
-D han
-D sinka
-D akalfr
-D lend
-D frendop
-D frin
-D silicpy
-D dlen
+D jame
+D ferries
+D eyebright
+D gdynia
+D executory
+D satire
+D beamsplitter
+D pressured
+D ediff
+D fortitude
