--- a/test1k.in
+++ b/test1k.in
@@ -1,7 +1,13 @@
-S grand
-S and
-S violet
-S xray
+S fromt
+S pertwee
+S sweltering
+S riaz
+S makinen
+S comission
+S greenbush
+S wwwlittlewoodscom
+S warpath
+S moneyweekz
 A henry 123456
 A han 2343
 A sinka 43434
@@ -12,12 +18,6 @@ A frin 43434
 A dlen 43434
 A dnedi 43443
 A akalfr 3232
-S henry
-S han
-S frin
-S akalfr
-S silicpy
-S frendop
 AC fis
 AC can
 AC sili
@@ -28,13 +28,13 @@ AC n
 AC sl
 AC c
 AC m
-D canoo
-D henry
-D han
-D sinka
-D akalfr
-D lend
-D frendop
-D frin
-D silicpy
-D dlen
+D fromt
+D pertwee
+D sweltering
+D riaz
+D makinen
+D comission
+D greenbush
+D wwwlittlewoodscom
+D warpath
+D moneyweek
