--- a/test50k.in
+++ b/test50k.in
@@ -1,7 +1,13 @@
-S grand
-S and
-S violet
-S xray
+S receptors
+S smo
+S symons
+S inp
+S shelved
+S panjim
+S bensalem
+S criminalization
+S pollute
+S vlaamsz
 A henry 123456
 A han 2343
 A sinka 43434
@@ -12,12 +18,6 @@ A frin 43434
 A dlen 43434
 A dnedi 43443
 A akalfr 3232
-S henry
-S han
-S frin
-S akalfr
-S silicpy
-S frendop
 AC fis
 AC can
 AC sili
@@ -28,13 +28,13 @@ AC n
 AC sl
 AC c
 AC m
-D canoo
-D henry
-D han
-D sinka
-D akalfr
-D lend
-D frendop
-D frin
-D silicpy
-D dlen
+D receptors
+D smo
+D symons
+D inp
+D shelved
+D panjim
+D bensalem
+D criminalization
+D pollute
+D vlaams
